@@ -456,6 +456,21 @@
         <remarks />
       </Docs>
     </Member>
+    <Member MemberName="SetIconDefault">
+      <MemberSignature Language="C#" Value="public static void SetIconDefault (Gdk.DragContext context);" />
+      <MemberType>Method</MemberType>
+      <ReturnValue>
+        <ReturnType>System.Void</ReturnType>
+      </ReturnValue>
+      <Parameters>
+        <Parameter Name="context" Type="Gdk.DragContext" />
+      </Parameters>
+      <Docs>
+        <summary>Sets the icon for a particular drag to the default icon.</summary>
+        <param name="context">The context of the drag (this must be called with a context for the source side of a drag).</param>
+        <remarks />
+      </Docs>
+    </Member>
     <Member MemberName="IconDefault">
       <MemberSignature Language="C#" Value="public static Gdk.DragContext IconDefault { set; };" />
       <MemberType>Property</MemberType>
@@ -465,9 +480,8 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>Sets the icon for a particular drag to the default icon.</summary>
-        <value>
-          <see langword="true" /> if the icon has been made the default.</value>
+        <summary>Obsolete. Replaced by <see cref="M:Gtk.Drag.SetIconDefault" /></summary>
+        <value />
         <remarks />
       </Docs>
     </Member>
