@@ -376,6 +376,19 @@ For a example how to handle selection events see <see cref="T:Gtk.TreeSelection"
         <remarks>This is useful when you want to focus the attention of the user on a particular row. If <paramref name="focus_column" /> is not <see langword="null" />, then focus is given to the column specified by it. Additionally, if <paramref name="focus_column" /> is specified, and <paramref name="start_editing" /> is <see langword="true" />, then editing should be started in the specified cell. This function is often followed by <see cref="M:Gtk.Widget.GrabFocus()" /> in order to give keyboard focus to the widget. Please note that editing can only happen when the widget is realized.</remarks>
       </Docs>
     </Member>
+    <Member MemberName="VisibleRect">
+      <MemberSignature Language="C#" Value="public Gdk.Rectangle VisibleRect { get; };" />
+      <MemberType>Property</MemberType>
+      <ReturnValue>
+        <ReturnType>Gdk.Rectangle</ReturnType>
+      </ReturnValue>
+      <Parameters />
+      <Docs>
+        <summary>Returns the currently-visible region of the tree view, in tree view coordinates.</summary>
+        <value>a <see cref="T:Gdk.Rectangle" /></value>
+        <remarks>Convert to widget coordinates with <see cref="M:Gtk.TreeView.TreeToWidgetCoords(System.Int32,System.Int32,System.Int32,System.Int32)" />. Tree coordinates start at 0,0 for row 0 of the tree, and cover the entire scrollable area of the tree.</remarks>
+      </Docs>
+    </Member>
     <Member MemberName="GetVisibleRect">
       <MemberSignature Language="C#" Value="public void GetVisibleRect (Gdk.Rectangle visible_rect);" />
       <MemberType>Method</MemberType>
@@ -386,9 +399,9 @@ For a example how to handle selection events see <see cref="T:Gtk.TreeSelection"
         <Parameter Name="visible_rect" Type="Gdk.Rectangle" />
       </Parameters>
       <Docs>
-        <summary>Fills <paramref name="visible_rect" /> with the currently-visible region of the buffer, in tree coordinates.</summary>
+        <summary>Obsolete (and non-functional). Replaced by <see cref="M:Gtk.TreeView.VisibleRect" />.</summary>
         <param name="visible_rect">an object of type <see cref="T:Gdk.Rectangle" /></param>
-        <remarks>Convert to widget coordinates with <see cref="M:Gtk.TreeView.TreeToWidgetCoords(System.Int32,System.Int32,System.Int32,System.Int32)" />. Tree coordinates start at 0,0 for row 0 of the tree, and cover the entire scrollable area of the tree.</remarks>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="InsertColumn">
