@@ -179,3 +179,8 @@
 		{
 			ColumnDragFunction = func;
 		}
+
+		[Obsolete ("Replaced by VisibleRect property.")]
+		public void GetVisibleRect(Gdk.Rectangle visible_rect) {
+			;
+		}
