@@ -1,3 +1,13 @@
+2005-09-08  Dan Winship  <danw@novell.com>
+
+	* gtk/Gtk.metadata: Hide Gtk.Drag.SetIconDefault. Mark
+	Gtk.TreeView.GetVisibleRect's arg as "out".
+
+	* gtk/Drag.custom: gtk_drag_set_icon_default(ctx) should translate
+	to Gtk.Drag.SetIconDefault(ctx), not Gtk.Drag.IconDefault = ctx.
+
+	* gtk/TreeView.custom: add obsolete GetVisibleRect()
+
 2005-09-07  Mike Kestner  <mkestner@novell.com>
 
 	* bootstrap : bump version for beta2.
